--- a/pom.xml
+++ b/pom.xml
@@ -123,7 +123,7 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>
-                                group16.smartflightcheckinkiosk/group16.smartflightcheckinkiosk.HelloApplication
+                                group16.smartflightcheckinkiosk/group16.smartflightcheckinkiosk.APP
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
